@@ -12,16 +12,13 @@ import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
-import ru.yandex.practicum.filmorate.exceptions.IncorrectCountException;
-import ru.yandex.practicum.filmorate.exceptions.NotFoundException;
+import ru.yandex.practicum.filmorate.converter.UserConverter;
+import ru.yandex.practicum.filmorate.dto.UserDto;
 import ru.yandex.practicum.filmorate.model.User;
 import ru.yandex.practicum.filmorate.service.UserService;
-import ru.yandex.practicum.filmorate.validators.UserValidator;
 
 import java.util.Collection;
-import java.util.List;
-import java.util.Objects;
-import java.util.stream.Collectors;
+
 
 @Slf4j
 @RestController
@@ -30,141 +27,81 @@ import java.util.stream.Collectors;
 @RequestMapping("/users")
 public class UserController {
 
-    private final UserValidator userValidator;
     private final UserService userService;
 
     @PostMapping
-    public User createUser(@Valid @RequestBody User newUser) {
+    public UserDto createUser(@Valid @RequestBody UserDto newUser) {
 
         log.info("Получен HTTP-запрос на создание пользователя: {}", newUser);
-
-        userValidator.validate(newUser);
-        userService.addNewUserToStorage(newUser);
-
-        return newUser;
+        return userService.addNewUserToStorage(newUser);
     }
 
     @PutMapping
-    public User updateUser(@Valid @RequestBody User userForUpdate) {
-        log.info("Получен HTTP-запрос на обновление пользовательских данных: {}", userForUpdate);
+    public UserDto updateUser(@Valid @RequestBody UserDto dtoForUpdate) {
+        log.info("Получен HTTP-запрос на обновление пользовательских данных: {}", dtoForUpdate);
 
-        userValidator.validate(userForUpdate);
-        userValidator.checkCorrectIdOrDropException(userForUpdate.getId());
+        User fromDto = UserConverter.dtoToModel(dtoForUpdate);
+        User updatedUser = userService.updateUserInStorage(fromDto);
 
-        userService.getUserById(userForUpdate.getId());
-
-        userService.updateUserInStorage(userForUpdate);
-        return userForUpdate;
+        return UserConverter.modelToDto(updatedUser);
     }
 
     @PutMapping("/{id}/friends/{friendId}")
-    public User addNewUserFriend(@PathVariable Long id, @PathVariable Long friendId) {
+    public UserDto addNewUserFriend(@PathVariable Long id, @PathVariable Long friendId) {
+        log.info("Добавление друга: #{} для пользователя #{}", friendId, id);
 
-        log.info("Получен HTTP-запрос на обновление друзей пользователя: #{}, id друга для добавления: #{}", id, friendId);
+        userService.addFriend(id, friendId);
+        User modelFromStorage = userService.getUserFromStorage(id);
 
-        if (id == null || friendId == null) {
-            throw new NotFoundException("Не указан id пользователя.");
-        }
-
-        if (id <= 0 || friendId <= 0) {
-            throw new IncorrectCountException("Номер пользователя должен начинаться от 1 и выше.");
-        }
-
-        User user = userService.getUserFromStorage(id);
-        User friendUser = userService.getUserFromStorage(friendId);
-
-        user.getFriends().add(friendUser.getId());
-        friendUser.getFriends().add(user.getId());
-
-        return user;
+        return UserConverter.modelToDto(modelFromStorage);
     }
 
     @DeleteMapping("/{id}/friends/{friendId}")
-    public User deleteUserFromFriends(@PathVariable Long id, @PathVariable Long friendId) {
-
+    public UserDto deleteUserFromFriends(@PathVariable Long id, @PathVariable Long friendId) {
         log.info("Получен HTTP-запрос на удаление пользователя (#{}) из списка друзей (user #{})", friendId, id);
 
-        if (id == null || friendId == null) {
-            throw new NotFoundException("Не указан id пользователя.");
-        }
+        userService.deleteFriend(id, friendId);
+        User modelFromStorage = userService.getUserFromStorage(id);
 
-        if (id <= 0 || friendId <= 0) {
-            throw new IncorrectCountException("Номер пользователя должен начинаться от 1 и выше.");
-        }
-
-
-        User user = userService.getUserFromStorage(id);
-        User friendUser = userService.getUserFromStorage(friendId);
-
-
-        user.getFriends().remove(friendUser.getId());
-        friendUser.getFriends().remove(user.getId());
-
-        return user;
+        return UserConverter.modelToDto(modelFromStorage);
     }
 
     @GetMapping("/{id}/friends")
-    public Collection<User> getAllFriendsForUser(@PathVariable Long id) {
-
+    public Collection<UserDto> getAllFriendsForUser(@PathVariable Long id) {
         log.info("Получен HTTP-запрос на получение списка всех друзей пользователя: #{}", id);
 
-        if (id == null) {
-            throw new NotFoundException("Не указан id пользователя.");
-        }
-
-        if (id <= 0) {
-            throw new IncorrectCountException("Номер пользователя должен начинаться от 1 и выше.");
-        }
-
-        User userForSearch = userService.getUserById(id);
-
-        return userForSearch.getFriends().stream()
-                .map(userService::getUserById)
-                .filter(Objects::nonNull)
+        return userService.getFriends(id).stream()
+                .map(UserConverter::modelToDto)
                 .toList();
     }
 
     @GetMapping("/{id}/friends/common/{otherId}")
-    public Collection<User> getAllCommonFriendsWithUser(@PathVariable Long id, @PathVariable Long otherId) {
-
+    public Collection<UserDto> getAllCommonFriendsWithUser(@PathVariable Long id, @PathVariable Long otherId) {
         log.info("Получен HTTP-запрос на получение общих друзей с пользователем: #{}, от (user #{})", otherId, id);
 
-        if (id == null || otherId == null) {
-            throw new NotFoundException("Не указан id пользователя.");
-        }
-
-        if (id <= 0 || otherId <= 0) {
-            throw new IncorrectCountException("Номер пользователя должен начинаться от 1 и выше.");
-        }
-
-        User firstUser = userService.getUserFromStorage(id);
-
-        User secondUser = userService.getUserFromStorage(otherId);
-
-        List<Long> commonFriendIds = firstUser.getFriends().stream()
-                .filter(friendId -> secondUser.getFriends().contains(friendId))
-                .collect(Collectors.toList());
-
-        return commonFriendIds.stream()
-                .map(userService::getUserById)
-                .collect(Collectors.toList());
+        return userService.getCommonFriends(id, otherId).stream()
+                .map(UserConverter::modelToDto)
+                .toList();
     }
 
 
     @GetMapping
-    public Collection<User> getAllUsers() {
-
+    public Collection<UserDto> getAllUsers() {
         log.info("Получен HTTP-запрос на получение списка всех пользователей");
 
         return userService.getAllUsersFromStorage().stream()
                 .sorted((a, b) -> Long.compare(a.getId(), b.getId()))
+                .map(UserConverter::modelToDto)
                 .toList();
     }
 
     @GetMapping("/{id}")
-    public User getUserById(@PathVariable long id) {
+    public UserDto getUserById(@PathVariable long id) {
         log.info("Получен HTTP-запрос на получение пользователя по его номеру: #{}", id);
-        return userService.getUserById(id);
+
+        User modelFromStorage = userService.getUserFromStorage(id);
+
+        return UserConverter.modelToDto(modelFromStorage);
     }
 
 }
